--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>IT202 - Project 3</title>
     </head>
     <body>
-        <canvas id="game"></canvas>
+        <canvas id="game" width="300" height="500"></canvas>
     </body>
     <script src="scripts/script.js"></script>
 </html>
