Added basic obj collision

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <html>
-    <head>
-        <title>IT202 - Project 3</title>
-    </head>
-    <body>
-        <canvas id="game" width="300" height="500"></canvas>
-    </body>
-    <script src="scripts/script.js"></script>
+
+<head>
+    <title>IT202 - Project 3</title>
+</head>
+
+<body>
+    <canvas id="game" width="300" height="500"></canvas>
+</body>
+<script src="scripts/assetInit.js"></script>
+
+<script src="scripts/script.js"></script>
+
 </html>
