--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 
 <head>
     <title>IT202 - Project 3</title>
+    <style>
+        canvas {
+            background-color: black;
+        }
+    </style>
 </head>
 
 <body>
