Added game over screen

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <title>IT202 - Project 3</title>
     <style>
         canvas {
-            background-color: black;
+            background-image: url("./assets/bg.jpeg");
         }
     </style>
 </head>
 
 <body>
-    <canvas id="game" width="300" height="500"></canvas>
+    <canvas id="game" width="500" height="800"></canvas>
 </body>
 <script src="scripts/assetInit.js"></script>
 
